@@ -3,14 +3,14 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.panteleyev</groupId>
     <artifactId>money-manager</artifactId>
-    <version>2.2.0</version>
+    <version>2.3.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>MoneyManager</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>9</maven.compiler.source>
+        <maven.compiler.target>9</maven.compiler.target>
         <app.main.class>org.panteleyev.money.MoneyApplication</app.main.class>
         <timestamp>${maven.build.timestamp}</timestamp>
         <maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
@@ -20,27 +20,27 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>utilities</artifactId>
-            <version>2.0.0</version>
+            <version>2.1.0</version>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>persistence</artifactId>
-            <version>3.2.0</version>
+            <version>3.2.1</version>
         </dependency>
         <dependency>
             <groupId>org.controlsfx</groupId>
             <artifactId>controlsfx</artifactId>
-            <version>8.40.12</version>
+            <version>9.0.0-9</version>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.42</version>
+            <version>5.1.42-9</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-csv</artifactId>
-            <version>1.5</version>
+            <version>1.5-9</version>
         </dependency>
         <dependency>
             <groupId>org.testng</groupId>
@@ -61,28 +61,45 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <version>2.6</version>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.7.0</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.0.2</version>
+                <configuration>
+                    <outputDirectory>target/jmods</outputDirectory>
+                    <archive>
+                        <manifestEntries>
+                            <Main-Class>${app.main.class}</Main-Class>
+                        </manifestEntries>
+                    </archive>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>3.0.2</version>
                 <executions>
                     <execution>
-                        <id>make-assembly</id>
+                        <id>copy-dependencies</id>
                         <phase>package</phase>
                         <goals>
-                            <goal>single</goal>
+                            <goal>copy-dependencies</goal>
                         </goals>
                         <configuration>
-                            <archive>
-                                <manifest>
-                                    <mainClass>${app.main.class}</mainClass>
-                                </manifest>
-                            </archive>
-                            <descriptorRefs>
-                                <descriptorRef>jar-with-dependencies</descriptorRef>
-                            </descriptorRefs>
-                            <appendAssemblyId>false</appendAssemblyId>
+                            <includeScope>compile</includeScope>
+                            <includeScope>runtime</includeScope>
+                            <outputDirectory>target/jmods</outputDirectory>
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.20.1</version>
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
@@ -102,6 +119,8 @@
                             <arguments>
                                 <argument>-deploy</argument>
                                 <argument>-BjvmOptions=-XX:NewRatio=1</argument>
+                                <argument>-BjvmOptions=--add-exports javafx.base/com.sun.javafx.event=controlsfx</argument>
+                                <argument>-BjvmOptions=--add-modules java.xml.bind</argument>
                                 <argument>-native</argument>
                                 <argument>exe</argument>
                                 <argument>-name</argument>
@@ -110,16 +129,16 @@
                                 <argument>target/dists</argument>
                                 <argument>-outfile</argument>
                                 <argument>${project.name}</argument>
-                                <argument>-srcfiles</argument>
-                                <argument>target/${project.artifactId}-${project.version}.jar</argument>
                                 <argument>-Bicon=icons/icons.ico</argument>
                                 <argument>-BappVersion=${project.version}</argument>
                                 <argument>-BsystemWide=true</argument>
                                 <argument>-Bcopyright=Copyright (c) 2010, 2017, Petr Panteleyev</argument>
                                 <argument>-Bvendor=Petr Panteleyev</argument>
                                 <argument>-Bwin.menuGroup=Petr Panteleyev</argument>
-                                <argument>-appclass</argument>
-                                <argument>${app.main.class}</argument>
+                                <argument>--module-path</argument>
+                                <argument>target/jmods</argument>
+                                <argument>--module</argument>
+                                <argument>org.panteleyev.money/${app.main.class}</argument>
                                 <argument>-v</argument>
                             </arguments>
                         </configuration>
@@ -137,6 +156,8 @@
                             <arguments>
                                 <argument>-deploy</argument>
                                 <argument>-BjvmOptions=-XX:NewRatio=1</argument>
+                                <argument>-BjvmOptions=--add-exports javafx.base/com.sun.javafx.event=controlsfx</argument>
+                                <argument>-BjvmOptions=--add-modules java.xml.bind</argument>
                                 <argument>-native</argument>
                                 <argument>dmg</argument>
                                 <argument>-name</argument>
@@ -145,12 +166,12 @@
                                 <argument>target/dists</argument>
                                 <argument>-outfile</argument>
                                 <argument>${project.name}</argument>
-                                <argument>-srcfiles</argument>
-                                <argument>target/${project.artifactId}-${project.version}.jar</argument>
                                 <argument>-Bicon=icons/icons.icns</argument>
                                 <argument>-BappVersion=${project.version}</argument>
-                                <argument>-appclass</argument>
-                                <argument>${app.main.class}</argument>
+                                <argument>--module-path</argument>
+                                <argument>target/jmods</argument>
+                                <argument>--module</argument>
+                                <argument>org.panteleyev.money/${app.main.class}</argument>
                                 <argument>-v</argument>
                             </arguments>
                         </configuration>
@@ -168,6 +189,8 @@
                             <arguments>
                                 <argument>-deploy</argument>
                                 <argument>-BjvmOptions=-XX:NewRatio=1</argument>
+                                <argument>-BjvmOptions=--add-exports javafx.base/com.sun.javafx.event=controlsfx</argument>
+                                <argument>-BjvmOptions=--add-modules java.xml.bind</argument>
                                 <argument>-native</argument>
                                 <argument>rpm</argument>
                                 <argument>-name</argument>
@@ -176,8 +199,6 @@
                                 <argument>target/dists</argument>
                                 <argument>-outfile</argument>
                                 <argument>Password Generator</argument>
-                                <argument>-srcfiles</argument>
-                                <argument>target/${project.artifactId}-${project.version}.jar</argument>
                                 <argument>-Bicon=icons/icon48.png</argument>
                                 <argument>-BappVersion=${project.version}</argument>
                                 <argument>-BsystemWide=true</argument>
@@ -186,8 +207,10 @@
                                 <argument>-Bcategory=Utility</argument>
                                 <argument>-Bemail=petr@panteleyev.org</argument>
                                 <argument>-BlicenseType=BSD</argument>
-                                <argument>-appclass</argument>
-                                <argument>${app.main.class}</argument>
+                                <argument>--module-path</argument>
+                                <argument>target/jmods</argument>
+                                <argument>--module</argument>
+                                <argument>org.panteleyev.money/${app.main.class}</argument>
                                 <argument>-v</argument>
                             </arguments>
                         </configuration>
